fix the text overlaps bettwen long tweet and footer

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -38,7 +38,8 @@ article footer {
   height: 2.5em;
   margin-top: 0.5em;
   margin-left: 1em;
-  /* overflow: scroll;   */
+  margin-bottom: 1em;
+  overflow: scroll;  
 }
 
 .icons  .fa-sharp{
